Issue #2430415 by eshta: Fix horizontal select option display in personalize list on Firefox.

--- a/css/personalize.admin.css
+++ b/css/personalize.admin.css
@@ -167,7 +167,7 @@ div.personalize-target-wrapper div.form-item {
   display: inline-block;
 }
 
-.personalize-status-change * {
+.personalize-status-change *:not(option) {
   display: inline-block;
   margin-left: 1em;
 }
